--- a/src/dislife-list.html
+++ b/src/dislife-list.html
@@ -81,9 +81,15 @@
 					</div>
 					<div class="inner-slider">
 						<div class="inner-slider__bl js-slider-images">
-							<img class="disqus" src="img/list-slide.jpg" alt="">
-							<img class="disqus" src="img/list-slide.jpg" alt="">
-							<img class="disqus" src="img/list-slide.jpg" alt="">
+							<div>
+								<img class="disqus" src="img/list-slide.jpg" alt="">
+							</div>
+							<div>
+								<img class="disqus" src="img/list-slide.jpg" alt="">
+							</div>
+							<div>
+								<img class="disqus" src="img/list-slide.jpg" alt="">
+							</div>
 						</div>
 						<button class="inner-slider__prev js-slider-prev"><i class="fa fa-angle-left"></i></button>
 						<button class="inner-slider__next js-slider-next"><i class="fa fa-angle-right"></i></button>
@@ -148,9 +154,15 @@
 									</div>
 									<div class="inner-slider">
 										<div class="inner-slider__bl js-slider-images">
-											<img class="disqus" src="img/list-slide.jpg" alt="">
-											<img class="disqus" src="img/list-slide.jpg" alt="">
-											<img class="disqus" src="img/list-slide.jpg" alt="">
+											<div>
+												<img class="disqus" src="img/list-slide.jpg" alt="">
+											</div>
+											<div>
+												<img class="disqus" src="img/list-slide.jpg" alt="">
+											</div>
+											<div>
+												<img class="disqus" src="img/list-slide.jpg" alt="">
+											</div>
 										</div>
 										<button class="inner-slider__prev js-slider-prev"><i class="fa fa-angle-left"></i></button>
 										<button class="inner-slider__next js-slider-next"><i class="fa fa-angle-right"></i></button>
@@ -215,9 +227,15 @@
 									</div>
 									<div class="inner-slider">
 										<div class="inner-slider__bl js-slider-images">
-											<img class="disqus" src="img/list-slide.jpg" alt="">
-											<img class="disqus" src="img/list-slide.jpg" alt="">
-											<img class="disqus" src="img/list-slide.jpg" alt="">
+											<div>
+												<img class="disqus" src="img/list-slide.jpg" alt="">
+											</div>
+											<div>
+												<img class="disqus" src="img/list-slide.jpg" alt="">
+											</div>
+											<div>
+												<img class="disqus" src="img/list-slide.jpg" alt="">
+											</div>
 										</div>
 										<button class="inner-slider__prev js-slider-prev"><i class="fa fa-angle-left"></i></button>
 										<button class="inner-slider__next js-slider-next"><i class="fa fa-angle-right"></i></button>
@@ -282,9 +300,15 @@
 									</div>
 									<div class="inner-slider">
 										<div class="inner-slider__bl js-slider-images">
-											<img class="disqus" src="img/list-slide.jpg" alt="">
-											<img class="disqus" src="img/list-slide.jpg" alt="">
-											<img class="disqus" src="img/list-slide.jpg" alt="">
+											<div>
+												<img class="disqus" src="img/list-slide.jpg" alt="">
+											</div>
+											<div>
+												<img class="disqus" src="img/list-slide.jpg" alt="">
+											</div>
+											<div>
+												<img class="disqus" src="img/list-slide.jpg" alt="">
+											</div>
 										</div>
 										<button class="inner-slider__prev js-slider-prev"><i class="fa fa-angle-left"></i></button>
 										<button class="inner-slider__next js-slider-next"><i class="fa fa-angle-right"></i></button>
@@ -349,9 +373,15 @@
 									</div>
 									<div class="inner-slider">
 										<div class="inner-slider__bl js-slider-images">
-											<img class="disqus" src="img/list-slide.jpg" alt="">
-											<img class="disqus" src="img/list-slide.jpg" alt="">
-											<img class="disqus" src="img/list-slide.jpg" alt="">
+											<div>
+												<img class="disqus" src="img/list-slide.jpg" alt="">
+											</div>
+											<div>
+												<img class="disqus" src="img/list-slide.jpg" alt="">
+											</div>
+											<div>
+												<img class="disqus" src="img/list-slide.jpg" alt="">
+											</div>
 										</div>
 										<button class="inner-slider__prev js-slider-prev"><i class="fa fa-angle-left"></i></button>
 										<button class="inner-slider__next js-slider-next"><i class="fa fa-angle-right"></i></button>
