--- a/src/dislife-text-special-puzzles-user-in.html
+++ b/src/dislife-text-special-puzzles-user-in.html
@@ -12,25 +12,27 @@
 		<div class="l-news">
 			<div class="l-col1">
 				<div class="user-profile">
-					<div class="user-profile__imgs">
-						<div class="user-profile__title">Артюшкина Юлия Игоревна,</div>
-						<div class="user-profile__years">26 лет</div>
-					</div>
-					<div class="user-profile__info">
-						<a href="#" class="btn-mail btn-mail_big">
-							<i class="fa fa-envelope"></i>
-							<span>Написать</span>
-						</a>
-						<div class="user-profile__time">была на сайте 12 минут назад</div>
-						<div class="user-profile__btns">
-							<a href="#" class="btn-action btn-action_mint btn-action_big">
-								<i class="fa fa-user-plus"></i>
-								<span>Добавить в друзья</span>
+					<div class="user-profile__top">
+						<div class="user-profile__imgs">
+							<div class="user-profile__title">Артюшкина Юлия Игоревна,</div>
+							<div class="user-profile__years">26 лет</div>
+						</div>
+						<div class="user-profile__info">
+							<a href="#" class="btn-mail btn-mail_big">
+								<i class="fa fa-envelope"></i>
+								<span>Написать</span>
 							</a>
-							<a href="#" class="btn-action btn-action_red btn-action_big">
-								<i class="fa fa-close"></i>
-								<span>Заблокировать</span>
-							</a>
+							<div class="user-profile__time">была на сайте 12 минут назад</div>
+							<div class="user-profile__btns">
+								<a href="#" class="btn-action btn-action_mint btn-action_big">
+									<i class="fa fa-user-plus"></i>
+									<span>Добавить в друзья</span>
+								</a>
+								<a href="#" class="btn-action btn-action_red btn-action_big">
+									<i class="fa fa-close"></i>
+									<span>Заблокировать</span>
+								</a>
+							</div>
 						</div>
 					</div>
 					<div class="user-profile__imgs js-user-gallery">
