--- a/src/dislife-text-special-puzzles-user.html
+++ b/src/dislife-text-special-puzzles-user.html
@@ -12,16 +12,14 @@
 		<div class="l-news">
 			<div class="l-col1">
 				<div class="user-profile">
-					<div class="user-profile__imgs">
-						<div class="user-profile__title">Артюшкина Юлия Игоревна,</div>
-						<div class="user-profile__years">26 лет</div>
-					</div>
-					<div class="user-profile__info">
-					<!-- 	<a href="#" class="btn-mail btn-mail_big">
-							<i class="fa fa-envelope"></i>
-							<span>Написать</span>
-						</a> -->
-						<div class="user-profile__time">была на сайте 12 минут назад</div>
+					<div class="user-profile__top">
+						<div class="user-profile__imgs">
+							<div class="user-profile__title">Артюшкина Юлия Игоревна,</div>
+							<div class="user-profile__years">26 лет</div>
+						</div>
+						<div class="user-profile__info">
+							<div class="user-profile__time">была на сайте 12 минут назад</div>
+						</div>
 					</div>
 					<div class="user-profile__imgs js-user-gallery">
 						<div class="user-photo">
