--- a/src/dislife-main.html
+++ b/src/dislife-main.html
@@ -52,6 +52,38 @@
 				</div>
 			</div>
 		</div>
+		<div class="row">
+			<div class="col-lg">
+				<div class="item item_big-mod item_violet item_big">
+					<a href="#" class="btn btn_gold">Маленькая политика</a>
+					<a href="#" class="item__img" style="background-image: url(img/item-big.jpg)">
+					</a>
+					<a href="#" class="item__txt">
+						<div class="item__txt-in">
+							<p class="item__author">Инструкция</p>
+							<p class="item__subtitle">Как правильно экономить на авиабилетах? Руководство к действию</p>
+							<p class="item__info">Почему воспитанникам детских домов не могут помочь ни взрослые, ни закон, и за что здоровых детей отправляют в психиатрические больницы</p>
+						</div>
+					</a>
+				</div>
+			</div>
+			<div class="col-xs">
+				<div class="social">
+					<div class="social__title"><a href="#">Кто мы такие?</a></div>
+					<ul class="social__list">
+						<li><a href="https://www.facebook.com/disliferu/" class="is-fb"><i class="fa fa-facebook"></i></a></li>
+						<li><a href="https://vk.com/dislife_ru" class="is-tw"><i class="fa fa-twitter"></i></a></li>
+						<li><a href="http://ok.ru/group/53804676219108" class="is-vk"><i class="fa fa-vk"></i></a></li>
+						<li><a href="https://twitter.com/DislifeRu" class="is-od"><i class="fa fa-odnoklassniki"></i></a></li>
+					</ul>
+				</div>
+				<div class="banner-img">
+					<a href="#">
+						<img src="img/banner.jpg" alt="banner">
+					</a>
+				</div>
+			</div>
+		</div>
 		<div class="special-projects">
 			<ul class="special-projects__list">
 				<li class="special-projects__heading">
