--- a/src/dislife-text-special-patronus.html
+++ b/src/dislife-text-special-patronus.html
@@ -57,7 +57,7 @@
 						<li><a href="#" class="icon-vk"></a></li>
 						<li><a href="#" class="fa fa-odnoklassniki"></a></li>
 					</ul>
-				</div>	
+				</div>
 				<div class="js-sticky-end"></div>
 			</div>
 			<div class="l-col2">
@@ -74,7 +74,7 @@
 						<p>грамотными консультациями родителей, перепиской с профильными ведомствами, обжалованиями, ручным управлением</p>
 					</div>
 				</div>
-			</div>			
+			</div>
 		</div>
 	</div>
 	<div class="section-gray">
@@ -271,7 +271,19 @@
 			<div class="row">
 				<div class="col-md">
 					<!-- begin item  -->
-					<div class="item item_orange item_mod item_lg">
+					<div class="item item_big-mod item_violet item_big item_lg">
+						<a href="#" class="btn btn_gold">Маленькая политика</a>
+						<a href="#" class="item__img" style="background-image: url(img/item-big.jpg)">
+						</a>
+						<a href="#" class="item__txt">
+							<div class="item__txt-in">
+								<p class="item__author">Иван Иванов</p>
+								<p class="item__txt-title">Дети Гольяново</p>
+								<p class="item__info">Как помочь детям в детском доме</p>
+							</div>
+						</a>
+					</div>
+					<!-- <div class="item item_orange item_mod item_lg">
 						<a href="#" class="btn btn_orange">СПЕЦПРОЕКТЫ</a>
 						<a href="#" class="item__img" style="background-image: url(img/item-big.jpg)">
 							<div class="item__title">
@@ -293,49 +305,49 @@
 								</div>
 							</div>
 						</a>
+					</div> -->
+					<!-- end item -->
+				</div>
+				<div class="col-sm">
+					<!-- begin item  -->
+					<div class="item item_orange item_mod">
+						<a href="#" class="btn btn_orange">Спецпроекты</a>
+						<a href="#" class="item__img" style="background-image: url(img/item3.jpg)">
+							<div class="item__title">
+								<p class="item__author">Ира Соломонова</p>
+								<p class="item__subtitle">Дети Гольяново</p>
+								<p class="item__info">Почему воспитанникам детских домов не могут помочь ни взрослые, ни закон, и за что здоровых детей отправляют в психиатрические больницы</p>
+							</div>
+							<span class="item__arr"></span>
+						</a>
+						<a href="#" class="item__txt">
+							<div class="item__txt-in">
+								<p class="item__instruction">Инструкция</p>
+								<p>Как правильно экономить на авиабилетах? Руководство к действию</p>
+							</div>
+						</a>
+					</div>
+					<!-- end item -->
+					<!-- begin item  -->
+					<div class="item item_orange item_mod">
+						<a href="#" class="btn btn_orange">Спецпроекты</a>
+						<a href="#" class="item__img" style="background-image: url(img/item3.jpg)">
+							<div class="item__title">
+								<p class="item__author">Ира Соломонова</p>
+								<p class="item__subtitle">Дети Гольяново</p>
+								<p class="item__info">Почему воспитанникам детских домов не могут помочь ни взрослые, ни закон, и за что здоровых детей отправляют в психиатрические больницы</p>
+							</div>
+							<span class="item__arr"></span>
+						</a>
+						<a href="#" class="item__txt">
+							<div class="item__txt-in">
+								<p class="item__instruction">Инструкция</p>
+								<p>Как правильно экономить на авиабилетах? Руководство к действию</p>
+							</div>
+						</a>
 					</div>
 					<!-- end item -->
 				</div>
-				<div class="col-sm">					
-					<!-- begin item  -->
-					<div class="item item_orange item_mod">
-						<a href="#" class="btn btn_orange">Спецпроекты</a>
-						<a href="#" class="item__img" style="background-image: url(img/item3.jpg)">
-							<div class="item__title">
-								<p class="item__author">Ира Соломонова</p>
-								<p class="item__subtitle">Дети Гольяново</p>
-								<p class="item__info">Почему воспитанникам детских домов не могут помочь ни взрослые, ни закон, и за что здоровых детей отправляют в психиатрические больницы</p>
-							</div>
-							<span class="item__arr"></span>
-						</a>
-						<a href="#" class="item__txt">
-							<div class="item__txt-in">
-								<p class="item__instruction">Инструкция</p>
-								<p>Как правильно экономить на авиабилетах? Руководство к действию</p>
-							</div>
-						</a>
-					</div>
-					<!-- end item -->					
-					<!-- begin item  -->
-					<div class="item item_orange item_mod">
-						<a href="#" class="btn btn_orange">Спецпроекты</a>
-						<a href="#" class="item__img" style="background-image: url(img/item3.jpg)">
-							<div class="item__title">
-								<p class="item__author">Ира Соломонова</p>
-								<p class="item__subtitle">Дети Гольяново</p>
-								<p class="item__info">Почему воспитанникам детских домов не могут помочь ни взрослые, ни закон, и за что здоровых детей отправляют в психиатрические больницы</p>
-							</div>
-							<span class="item__arr"></span>
-						</a>
-						<a href="#" class="item__txt">
-							<div class="item__txt-in">
-								<p class="item__instruction">Инструкция</p>
-								<p>Как правильно экономить на авиабилетах? Руководство к действию</p>
-							</div>
-						</a>
-					</div>
-					<!-- end item -->
-				</div>				
 			</div>
 			<div class="js-load-block" style="display: none;">
 				<div class="row">
@@ -366,26 +378,7 @@
 						</div>
 						<!-- end item -->
 					</div>
-					<div class="col-sm">					
-						<!-- begin item  -->
-						<div class="item item_orange item_mod">
-							<a href="#" class="btn btn_orange">Спецпроекты</a>
-							<a href="#" class="item__img" style="background-image: url(img/item3.jpg)">
-								<div class="item__title">
-									<p class="item__author">Ира Соломонова</p>
-									<p class="item__subtitle">Дети Гольяново</p>
-									<p class="item__info">Почему воспитанникам детских домов не могут помочь ни взрослые, ни закон, и за что здоровых детей отправляют в психиатрические больницы</p>
-								</div>
-								<span class="item__arr"></span>
-							</a>
-							<a href="#" class="item__txt">
-								<div class="item__txt-in">
-									<p class="item__instruction">Инструкция</p>
-									<p>Как правильно экономить на авиабилетах? Руководство к действию</p>
-								</div>
-							</a>
-						</div>
-						<!-- end item -->					
+					<div class="col-sm">
 						<!-- begin item  -->
 						<div class="item item_orange item_mod">
 							<a href="#" class="btn btn_orange">Спецпроекты</a>
@@ -405,7 +398,26 @@
 							</a>
 						</div>
 						<!-- end item -->
-					</div>				
+						<!-- begin item  -->
+						<div class="item item_orange item_mod">
+							<a href="#" class="btn btn_orange">Спецпроекты</a>
+							<a href="#" class="item__img" style="background-image: url(img/item3.jpg)">
+								<div class="item__title">
+									<p class="item__author">Ира Соломонова</p>
+									<p class="item__subtitle">Дети Гольяново</p>
+									<p class="item__info">Почему воспитанникам детских домов не могут помочь ни взрослые, ни закон, и за что здоровых детей отправляют в психиатрические больницы</p>
+								</div>
+								<span class="item__arr"></span>
+							</a>
+							<a href="#" class="item__txt">
+								<div class="item__txt-in">
+									<p class="item__instruction">Инструкция</p>
+									<p>Как правильно экономить на авиабилетах? Руководство к действию</p>
+								</div>
+							</a>
+						</div>
+						<!-- end item -->
+					</div>
 				</div>
 			</div>
 		</div>
