update yellow to gold

--- a/src/dislife-main.html
+++ b/src/dislife-main.html
@@ -559,7 +559,7 @@
 				</div>
 			</div>
 			<div class="load-more__section">
-				<div class="item-banner item-banner_yellow">
+				<div class="item-banner item-banner_gold">
 					<a href="#" class="item-banner__bg" style="background-image: url(img/bitmap2.jpg);"></a>
 					<a href="#" class="btn btn_orange">Спецпроекты</a>
 					<div class="item-banner__left">
