--- a/src/dislife-main-polytique.html
+++ b/src/dislife-main-polytique.html
@@ -15,7 +15,7 @@
 		</div>
 		<div class="main-head__img" style="background-image: url(img/main-head-polytique.jpg);"></div>
 	</div>
-	<div class="fullscreen fullscreen_yellow" style="background-image: url(img/fullheight-pic.jpg);">
+	<div class="fullscreen fullscreen_gold" style="background-image: url(img/fullheight-pic.jpg);">
 		<div class="fullscreen__inner">
 			<div class="fullscreen__center">
 				<div class="slider">
@@ -319,7 +319,7 @@
 						</div>
 					</div>
 					<div class="col-items">
-						<blockquote class="blockquote blockquote_yellow">
+						<blockquote class="blockquote blockquote_gold">
 							<a href="#" class="blockquote__link">
 								<div class="blockquote__info">
 									<div>Наталья Семенова,</div>
@@ -367,7 +367,7 @@
 			</div>
 		</div>
 	</div>
-	//=include partials/footer.html 
+	//=include partials/footer.html
 </div>
 <!-- END out-->
 //=include partials/popups.html
