--- a/src/dislife-main.html
+++ b/src/dislife-main.html
@@ -442,7 +442,7 @@
 						<div class="box-form__title">Пазлы</div>
 						<div class="box-form__subtitle">Знакомства для людей с ограниченными возможностями</div>
 						<div class="box-form__field">
-							<div class="select js-select">
+							<!-- <div class="select js-select">
 								<div class="select__text js-select-text">Возраст</div>
 								<i class="fa fa-angle-down"></i>
 								<ul class="select__list js-select-list">
@@ -455,10 +455,15 @@
 									<option value="Возраст1">Возраст1</option>
 									<option value="Возраст2">Возраст2</option>
 								</select>
-							</div>
+							</div> -->
+							<select class="js-select-box" style="width: 100%;">
+								<option value="Возраст">Возраст</option>
+								<option value="Возраст1">Возраст1</option>
+								<option value="Возраст2">Возраст2</option>
+							</select>
 						</div>
 						<div class="box-form__field">
-							<div class="select js-select">
+						<!-- 	<div class="select js-select">
 								<div class="select__text js-select-text">Пол</div>
 								<i class="fa fa-angle-down"></i>
 								<ul class="select__list js-select-list">
@@ -471,10 +476,15 @@
 									<option value="Пол1">Пол1</option>
 									<option value="Пол2">Пол2</option>
 								</select>
-							</div>
+							</div> -->
+							<select class="js-select-box" style="width: 100%;">
+								<option value="Пол">Пол</option>
+								<option value="Пол1">Пол1</option>
+								<option value="Пол2">Пол2</option>
+							</select>
 						</div>
 						<div class="box-form__field">
-							<div class="select js-select">
+							<!-- <div class="select js-select">
 								<div class="select__text js-select-text">Город</div>
 								<i class="fa fa-angle-down"></i>
 								<ul class="select__list js-select-list">
@@ -491,7 +501,14 @@
 									<option value="Город3">Город3</option>
 									<option value="Город4">Город4</option>
 								</select>
-							</div>
+							</div> -->
+							<select class="js-select-box" style="width: 100%;">
+								<option value="Город">Город</option>
+								<option value="Город1">Город1</option>
+								<option value="Город2">Город2</option>
+								<option value="Город3">Город3</option>
+								<option value="Город4">Город4</option>
+							</select>
 						</div>
 						<div class="box-form__bottom">
 							<button class="box-form__btn">Найти</button>
