--- a/src/dislife-text-special-puzzles-user-messages-compose.html
+++ b/src/dislife-text-special-puzzles-user-messages-compose.html
@@ -20,7 +20,7 @@
 						<form action="" class="profile-form">
 							<div class="profile-form__field">
 								<div class="profile-form__label">КОМУ</div>
-								<div class="select select_white js-select">
+								<!-- <div class="select select_white js-select">
 									<div class="select__text js-select-text"></div>
 									<i class="fa fa-angle-down"></i>
 									<ul class="select__list js-select-list">
@@ -33,7 +33,12 @@
 										<option value="value1">value1</option>
 										<option value="value2">value2</option>
 									</select>
-								</div>
+								</div> -->
+								<select class="js-select-box is-gray" style="width: 100%;">
+									<option value="value">value</option>
+									<option value="value1">value1</option>
+									<option value="value2">value2</option>
+								</select>
 							</div>
 							<div class="profile-form__field">
 								<div class="profile-form__label">ТЕКСТ СООБЩЕНИЯ</div>
