--- a/src/dislife-text-special-puzzles-user-profile.html
+++ b/src/dislife-text-special-puzzles-user-profile.html
@@ -35,7 +35,7 @@
 								</div>
 								<div class="user-form__field">
 									<div class="user-form__label">ПОЛ</div>
-									<div class="select select_user js-select">
+									<!-- <div class="select select_user js-select">
 										<div class="select__text js-select-text"></div>
 										<i class="fa fa-angle-down"></i>
 										<ul class="select__list js-select-list">
@@ -48,7 +48,12 @@
 											<option value="value1">value1</option>
 											<option value="value2">value2</option>
 										</select>
-									</div>
+									</div> -->
+									<select class="js-select-box is-small" style="width: 100%;">
+										<option value="value">value</option>
+										<option value="value1">value1</option>
+										<option value="value2">value2</option>
+									</select>
 								</div>
 								<div class="user-form__field">
 									<div class="user-form__label">ГОРОД</div>
