--- a/src/dislife-text-special-puzzles.html
+++ b/src/dislife-text-special-puzzles.html
@@ -47,7 +47,7 @@
 						<li><a href="https://twitter.com/DislifeRu" class="is-od"><i class="fa fa-odnoklassniki"></i></a></li>
 					</ul>
 				</div>
-			</div>			
+			</div>
 		</div>
 	</div>
 	<div class="section-gray">
@@ -58,7 +58,7 @@
 						<div class="special-form__top">
 							<div class="special-form__gender">
 								<div class="special-form__label">Пол</div>
-								<div class="select select_white js-select">
+								<!-- <div class="select select_white js-select">
 									<div class="select__text js-select-text"></div>
 									<i class="fa fa-angle-down"></i>
 									<ul class="select__list js-select-list">
@@ -71,7 +71,12 @@
 										<option value="женский">женский</option>
 										<option value="мужской">мужской</option>
 									</select>
-								</div>
+								</div> -->
+								<select class="js-select-box is-gray" style="width: 100%;">
+									<option value="любой">любой</option>
+									<option value="женский">женский</option>
+									<option value="мужской">мужской</option>
+								</select>
 							</div>
 							<div class="special-form__years">
 								<div class="special-form__label">Возраст, лет</div>
@@ -83,7 +88,7 @@
 							</div>
 							<div class="special-form__country">
 								<div class="special-form__label">Страна / город</div>
-								<div class="select select_white js-select">
+								<!-- <div class="select select_white js-select">
 									<div class="select__text js-select-text"></div>
 									<i class="fa fa-angle-down"></i>
 									<ul class="select__list js-select-list">
@@ -96,7 +101,12 @@
 										<option value="value1">value1</option>
 										<option value="value2">value2</option>
 									</select>
-								</div>
+								</div> -->
+								<select class="js-select-box is-gray" style="width: 100%;">
+									<option value="value">value</option>
+									<option value="value1">value1</option>
+									<option value="value2">value2</option>
+								</select>
 							</div>
 						</div>
 						<div class="special-form__check-row">
@@ -453,7 +463,7 @@
 			<div class="block-text">
 				<div class="block-text__inner">
 					<p>Семь лет назад Dislife.ru был зарегистрирован как портал для людей с ограниченными возможностями.</p>
-					<p>Ежемесячно его читают около 100 000 тысяч инвалидов со всей страны. Мы дорожим этой аудиторией  и не хотим ее терять. Самым популярным разделом на старой версии Dislife.ru был форум. И мы сохранили его.</p>
+					<p>Ежемесячно его читают около 100 000 тысяч инвалидов со всей страны. Мы дорожим этой аудиторией и не хотим ее терять. Самым популярным разделом на старой версии Dislife.ru был форум. И мы сохранили его.</p>
 				</div>
 				<a href="#" class="btn-blue"><i class="fa fa-weixin"></i><span>Форум Dislife.ru</span></a>
 			</div>
