--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,13 @@
 <!-- BEGIN  out-->
 <div class="out">
 	//=include partials/header.html
-	<div class="container">
+	<div class="container" style="padding: 20px 0 40px 0">
+		<a href="dislife-work.html" target="_blank">dislife-work.html</a>
+		<a href="dislife-work-v2.html" target="_blank">dislife-work-v2.html</a>
+		<a href="dislife-work-add-resume.html" target="_blank">dislife-work-add-resume.html</a>
+		<a href="dislife-work-add-vacancy.html" target="_blank">dislife-work-add-vacancy.html</a>
+		<a href="dislife-work-vacancies.html" target="_blank">dislife-work-vacancies.html</a>
+		<hr>
 		<a href="tech.html" target="_blank">tech.html</a>
 		<a href="dislife-main.html" target="_blank">dislife-main.html</a>
 		<a href="dislife-main-education.html" target="_blank">dislife-main-education.html</a>
