--- a/src/dislife-work-v2.html
+++ b/src/dislife-work-v2.html
@@ -49,13 +49,12 @@
 				</div>
 			</div>
 			<div class="col-sm">
-				<div class="social">
+				<div class="social" style="background: white">
 					<div class="social__title"><a href="#">Узнать подробнее</a></div>
 					<ul class="social__list">
-						<li><a href="https://www.facebook.com/disliferu/" class="is-fb"><i class="fa fa-facebook"></i></a></li>
-						<li><a href="https://vk.com/dislife_ru" class="is-tw"><i class="fa fa-twitter"></i></a></li>
-						<li><a href="http://ok.ru/group/53804676219108" class="is-vk"><i class="fa fa-vk"></i></a></li>
-						<li><a href="https://twitter.com/DislifeRu" class="is-od"><i class="fa fa-odnoklassniki"></i></a></li>
+						<li><img src="img/g1.png" class="is-gx"></li>
+						<li><img src="img/g2.png" class="is-gx"></li>
+						<li><img src="img/g3.png" class="is-gx"></li>
 					</ul>
 				</div>
 			</div>
