update resume page

--- a/src/index.html
+++ b/src/index.html
@@ -42,6 +42,7 @@
 		<a href="dislife-text-special-puzzles-user-friends.html" target="_blank">dislife-text-special-puzzles-user-friends.html</a>
 		<a href="dislife-text-special-puzzles-user-settings.html" target="_blank">dislife-text-special-puzzles-user-settings.html</a>
 		<a href="dislife-text-special-puzzles-user-profile.html" target="_blank">dislife-text-special-puzzles-user-profile.html</a>
+		<a href="dislife-resume-form-1.html" target="_blank">dislife-resume-form-1.html</a>
 	</div>
 </div>
 <!-- END out-->
