--- a/src/index.html
+++ b/src/index.html
@@ -44,6 +44,7 @@
 		<a href="dislife-text-special-puzzles-user-profile.html" target="_blank">dislife-text-special-puzzles-user-profile.html</a>
 		<a href="dislife-resume-form-1.html" target="_blank">dislife-resume-form-1.html</a>
 		<a href="dislife-social-service.html" target="_blank">NEW dislife-social-service.html</a>
+		<a href="dislife-social-service-inbox.html" target="_blank">NEW dislife-social-service-inbox.html</a>
 	</div>
 </div>
 <!-- END out-->
