--- a/src/dislife-social-service.html
+++ b/src/dislife-social-service.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	//=include partials/head.html
+	<link rel="stylesheet" href="css/jquery-datepicker.css">
 	<link rel="stylesheet" href="css/new-style.css">
 	<title>Social Service</title>
 </head>
@@ -16,5 +17,6 @@
 //=include partials/popups.html
 <script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU" type="text/javascript"></script>
 <script src="js/new-app.js"></script>
+<script src="js/datepicker.js" type="text/javascript"></script>
 </body>
 </html>
