--- a/src/dislife-social-service-inbox.html
+++ b/src/dislife-social-service-inbox.html
@@ -368,8 +368,14 @@
 									<li><a href="#"><span>Гости</span><small>12</small></a></li>
 								</ul>
 							</li>
-							<li class="service-menu__item">
-								<a href="#" class="service-menu__link"><span>Настройки</span></a>
+							<li class="service-menu__item js-toggle">
+								<a href="#" class="service-menu__link js-toggle-button"><span>Настройки</span></a>
+								<ul class="service-menu__submenu js-toggle-container">
+									<li><a href="#"><span>Профайл</span></a></li>
+									<li><a href="#"><span>Знакомства</span></a></li>
+									<li><a href="#"><span>Министерство нужных дел</span></a></li>
+									<li><a href="#"><span>Трудоустройство</span></a></li>
+								</ul>
 							</li>
 							<li class="service-menu__item">
 								<a href="#" class="service-menu__link"><span>Министерство нужных дел</span></a>
