add volonter catalog desktop

--- a/src/dislife-main-volonter.html
+++ b/src/dislife-main-volonter.html
@@ -9,27 +9,7 @@
 <!-- BEGIN  out-->
 <div class="out">
   //=include partials/header.html
-  <!-- begin topbar -->
-  <div class="topbar">
-    <div class="container">
-      <div class="topbar__inner">
-        <div class="topbar__nav">
-          <nav class="topbar-nav">
-            <ul class="topbar-nav__list">
-              <li class="topbar-nav__item"><a href="#" class="topbar-nav__link">О сервисе</a></li>
-              <li class="topbar-nav__item"><a href="#" class="topbar-nav__link">Все заявки <span>(148)</span></a></li>
-              <li class="topbar-nav__item"><a href="#" class="topbar-nav__link">Создать заявку</a></li>
-              <li class="topbar-nav__item"><a href="#" class="topbar-nav__link">Все помощники <span>(145)</span></a></li>
-              <li class="topbar-nav__item"><a href="#" class="topbar-nav__link">Хочу помогать</a></li>
-              <li class="topbar-nav__item"><a href="#" class="topbar-nav__link">Наши партнеры</a></li>
-            </ul>
-          </nav>
-        </div>
-        <div class="topbar__contact">Горячая линия: 8 (800) 333-44-55</div>
-      </div>
-    </div>    
-  </div>
-  <!-- end topbar -->
+  //=include partials/topbar.html
 
   <!-- begin hero -->
   <section class="hero" style="background-image: url('img/volonter/bg-hero.jpg');">
