--- a/src/index.html
+++ b/src/index.html
@@ -49,6 +49,7 @@
 		<a href="dislife-settings-profile.html" target="_blank">NEW dislife-settings-profile.html</a>
 		<a href="dislife-main-volonter.html" target="_blank">NEWNEW dislife-main-volonter.html</a>
 		<a href="dislife-main-volonter-popup.html" target="_blank">NEWNEW dislife-main-volonter-popup.html</a>
+		<a href="dislife-catalog-volonter.html" target="_blank">NEWNEW dislife-catalog-volonter.html</a>
 	</div>
 </div>
 <!-- END out-->
