--- a/src/dislife-catalog-volonter-popup.html
+++ b/src/dislife-catalog-volonter-popup.html
@@ -18,7 +18,7 @@
         <h2 class="h2 h2_md">Все помощники</h2>
       </div>
       <div class="catalog__btn">
-        <a href="#" class="btn-full btn-full_grad-orange">Хочу помогать</a>
+        <a href="#" class="btn-full btn-full_grad-orange"><span>Хочу помогать</span></a>
       </div>
       <div class="catalog__filters-block">
         //=include partials/filters-block.html
