add account popups desktop

--- a/src/dislife-catalog-volonter-popup.html
+++ b/src/dislife-catalog-volonter-popup.html
@@ -47,7 +47,7 @@
 //=include partials/popups.html
 
 <!-- begin popup-catalog -->
-<div class="popup popup_lg popup-catalog js-popup is-open" data-popup="popup-main-volonter">
+<div class="popup popup_lg popup-catalog js-popup is-open" data-popup="popup-catalog">
   <div class="popup__in popup_lg__in">
     <button class="fa fa-close popup__close js-close-popup"></button>
     <div class="popup__body">
@@ -83,7 +83,7 @@
             </div>
           </div>
           <div class="helper_width__right">
-            <div class="helper_width__type">Часный волонтер</div>
+            <div class="helper_width__type">Частный волонтер</div>
           </div>          
         </div>
       </div>
