--- a/src/index.html
+++ b/src/index.html
@@ -54,6 +54,7 @@
 		<a href="dislife-account-volonter.html" target="_blank">NEWNEW dislife-account-volonter.html</a>
 		<a href="dislife-account-volonter-popup-1.html" target="_blank">NEWNEW dislife-account-volonter-popup-1.html</a>
 		<a href="dislife-account-volonter-popup-2.html" target="_blank">NEWNEW dislife-account-volonter-popup-2.html</a>
+		<a href="dislife-account-volonter-user.html" target="_blank">NEWNEW dislife-account-volonter-user.html</a>
 	</div>
 </div>
 <!-- END out-->
