--- a/src/dislife-main-volonter.html
+++ b/src/dislife-main-volonter.html
@@ -188,7 +188,7 @@
       <div class="helpers-section__helpers">
         <!-- begin helpers -->
         <div class="helpers__wrap mob-slider__wrap">
-          <div class="helpers mob-slider js-mob-slider">
+          <div class="helpers mob-slider js-mob-slider" data-mob-slider="helpersSlider">
 
             <div class="helper">
               <div class="helper__img" style="background-image: url('img/volonter/user/user-2.jpg');">
@@ -349,12 +349,17 @@
             </div>
 
 
-            <div class="helpers__btn">
+            
+          </div>
+          <div class="helpers__btn">
               <a href="#" class="btn-full btn-full_grad-green"><span>Все помощники <span>(25)</span></span></a>
             </div>
-          </div>
-          <button class="inner-slider__prev js-mob-slider-prev"><i class="fa fa-angle-left"></i></button>
-          <button class="inner-slider__next js-mob-slider-next"><i class="fa fa-angle-right"></i></button>
+            <button class="helpers__prev mob-slider__prev js-mob-slider-prev">
+              <i class="fa fa-angle-left"></i>
+            </button>
+            <button class="helpers__next mob-slider__next js-mob-slider-next">
+              <i class="fa fa-angle-right"></i>
+            </button>
         </div>
         <!-- end helpers -->
       </div>
@@ -377,29 +382,34 @@
         </div>
 
         <!-- begin partners-slider -->
-        <div class="partners-slider">
-          <div class="partners-slider__item">
-            <img src="img/volonter/partners/partner-1.png" alt="">
+        <div class="partners-slider__wrap mob-slider__wrap">
+          <div class="partners-slider mob-slider js-mob-slider" data-mob-slider="partnersSlider">
+            <a href="#" class="partners-slider__item">
+              <img src="img/volonter/partners/partner-1.png" alt="">
+            </a>
+            <a href="#" class="partners-slider__item">
+              <img src="img/volonter/partners/partner-2.png" alt="">
+            </a>
+            <a href="#" class="partners-slider__item">
+              <img src="img/volonter/partners/partner-3.png" alt="">
+            </a>
+            <a href="#" class="partners-slider__item">
+              <img src="img/volonter/partners/partner-4.png" alt="">
+            </a>
+            <a href="#" class="partners-slider__item">
+              <img src="img/volonter/partners/partner-5.png" alt="">
+            </a>
+            <a href="#" class="partners-slider__item">
+              <img src="img/volonter/partners/partner-6.png" alt="">
+            </a>
           </div>
-          <div class="partners-slider__item">
-            <img src="img/volonter/partners/partner-2.png" alt="">
-          </div>
-          <div class="partners-slider__item">
-            <img src="img/volonter/partners/partner-3.png" alt="">
-          </div>
-          <div class="partners-slider__item">
-            <img src="img/volonter/partners/partner-4.png" alt="">
-          </div>
-          <div class="partners-slider__item">
-            <img src="img/volonter/partners/partner-5.png" alt="">
-          </div>
-          <div class="partners-slider__item">
-            <img src="img/volonter/partners/partner-6.png" alt="">
-          </div>
-          <div class="partners-slider__item">
-            <img src="img/volonter/partners/partner-7.png" alt="">
-          </div>
-        </div>
+          <button class="helpers__prev mob-slider__prev js-mob-slider-prev">
+            <i class="fa fa-angle-left"></i>
+          </button>
+          <button class="helpers__next mob-slider__next js-mob-slider-next">
+            <i class="fa fa-angle-right"></i>
+          </button>
+        </div>        
         <!-- end partners-slider -->
       </div>
     </div>
@@ -413,29 +423,34 @@
         </div>
 
         <!-- begin partners-slider -->
-        <div class="partners-slider">
-          <div class="partners-slider__item">
-            <img src="img/volonter/partners/partner-1.png" alt="">
+        <div class="partners-slider__wrap mob-slider__wrap">
+          <div class="partners-slider mob-slider js-mob-slider" data-mob-slider="partnersSlider">
+            <a href="#" class="partners-slider__item">
+              <img src="img/volonter/partners/partner-1.png" alt="">
+            </a>
+            <a href="#" class="partners-slider__item">
+              <img src="img/volonter/partners/partner-2.png" alt="">
+            </a>
+            <a href="#" class="partners-slider__item">
+              <img src="img/volonter/partners/partner-3.png" alt="">
+            </a>
+            <a href="#" class="partners-slider__item">
+              <img src="img/volonter/partners/partner-4.png" alt="">
+            </a>
+            <a href="#" class="partners-slider__item">
+              <img src="img/volonter/partners/partner-5.png" alt="">
+            </a>
+            <a href="#" class="partners-slider__item">
+              <img src="img/volonter/partners/partner-6.png" alt="">
+            </a>
           </div>
-          <div class="partners-slider__item">
-            <img src="img/volonter/partners/partner-2.png" alt="">
-          </div>
-          <div class="partners-slider__item">
-            <img src="img/volonter/partners/partner-3.png" alt="">
-          </div>
-          <div class="partners-slider__item">
-            <img src="img/volonter/partners/partner-4.png" alt="">
-          </div>
-          <div class="partners-slider__item">
-            <img src="img/volonter/partners/partner-5.png" alt="">
-          </div>
-          <div class="partners-slider__item">
-            <img src="img/volonter/partners/partner-6.png" alt="">
-          </div>
-          <div class="partners-slider__item">
-            <img src="img/volonter/partners/partner-7.png" alt="">
-          </div>
-        </div>
+          <button class="helpers__prev mob-slider__prev js-mob-slider-prev">
+            <i class="fa fa-angle-left"></i>
+          </button>
+          <button class="helpers__next mob-slider__next js-mob-slider-next">
+            <i class="fa fa-angle-right"></i>
+          </button>
+        </div>        
         <!-- end partners-slider -->
       </div>
 
