add dislife-catalog-volonter+popup adaptive

--- a/src/dislife-catalog-volonter-popup.html
+++ b/src/dislife-catalog-volonter-popup.html
@@ -59,7 +59,8 @@
           <div class="helper_width__center">
             <div class="helper__name">Иванов Андрей</div>
             <div class="helper__info">
-              <div class="helper_width__city">Москва</div>
+              <div class="helper_width__type">Частный волонтер</div>
+              <div class="helper_width__city">Москва</div>              
               <div class="helper__social">
                 <a href="#" class="helper__social-icon">
                   <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="42" height="42" viewBox="0 0 42 42"><defs><path id="7xeua" d="M433 4178.86a19.86 19.86 0 1 1 39.72 0 19.86 19.86 0 0 1-39.72 0z"/><path id="7xeub" d="M457.85 4179.63h-3.55v12.98h-5.37v-12.98h-2.55v-4.56h2.55v-2.95c0-2.11 1-5.42 5.42-5.42l3.98.02v4.42h-2.89c-.47 0-1.14.24-1.14 1.25v2.68h4.01z"/></defs><g><g transform="translate(-432 -4158)"><g><use fill="#3b5998" xlink:href="#7xeua"/><use fill="#fff" fill-opacity="0" stroke="#fff" stroke-miterlimit="50" xlink:href="#7xeua"/></g><g><use fill="#fff" xlink:href="#7xeub"/></g></g></g></svg>
