--- a/src/dislife-catalog-volonter.html
+++ b/src/dislife-catalog-volonter.html
@@ -13,7 +13,7 @@
 
   <!-- begin catalog -->
   <section class="catalog">
-    <div class="container">
+    <div class="container container_whider">
       <div class="catalog__title">
         <h2 class="h2 h2_md">Все помощники</h2>
       </div>
