add dislife-account-volonter-user adaptive+account-volonter popups adaptive

--- a/src/dislife-account-volonter-popup-2.html
+++ b/src/dislife-account-volonter-popup-2.html
@@ -3,7 +3,7 @@
 <head>
   //=include partials/head.html
   <link rel="stylesheet" href="css/new-style-2.css">
-  <title>Catalog Volonter Popup</title>
+  <title>Account Volonter Popup 2</title>
 </head>
 <body>
 <!-- BEGIN  out-->
@@ -47,7 +47,7 @@
 //=include partials/popups.html
 
 <!-- begin popup-account -->
-<div class="popup popup_lg popup-account js-popup is-open" data-popup="popup-account-2">
+<div class="popup popup_lg popup_mob-height-full popup-account js-popup is-open" data-popup="popup-account-2">
   <div class="popup__in popup_lg__in">
     <button class="fa fa-close popup__close js-close-popup"></button>
     <div class="popup__body">
