--- a/src/dislife-account-volonter-user.html
+++ b/src/dislife-account-volonter-user.html
@@ -6,93 +6,124 @@
   <title>Account Volonter User</title>
 </head>
 <body>
-<!-- BEGIN  out-->
-<div class="out">
-  //=include partials/header-user.html
-  <div class="user-container user-container_mod">
-    <div class="user-row">
-      <div class="user-left">
-        <div class="user-left__in">
+  <!-- BEGIN  out-->
+  <div class="out">
+    //=include partials/header-user.html
+    <div class="user-container user-container_mod">
+      <div class="user-row">
+        <div class="user-left">
+          <div class="user-left__in">
 
-        <!-- begin applications-section -->
-        <section class="applications-section">
+            <!-- begin applications-section -->
+            <section class="applications-section">
 
-          <div class="applications-section__top">
-            <div class="applications-section__title">
-              <h2 class="h2 h2_md">Мои зявки</h2>
-            </div>
-
-            <div class="applications-section__filter-tags">
-              <!-- begin filter-tags -->
-              <div class="filter-tags has-no-padding">
-                <button class="filter-tag is-fz-smaller">
-                  <span class="filter-tag__lable">Опубликованные <span>(2)</span></span>
-                </button>
-                <button class="filter-tag is-fz-smaller">
-                  <span class="filter-tag__lable">Волонтер ожидает вашего подтверждения <span>(2)</span></span>
-                </button>
-                <button class="filter-tag is-fz-smaller is-active">
-                  <span class="filter-tag__lable">Все <span>(4)</span></span>
-                </button>
+              <div class="profile-menu-mob">
+                <div class="select select_volonter js-select">
+                  <div class="select__text js-select-text">Заявки <small>(4)</small></div>
+                  <div class="select__icon"></div>
+                  <ul class="select__list js-select-list">
+                    <li data-val="value1">Волонтер</li>
+                    <li data-val="value2">Мои заявки <small>(4)</small></li>
+                    <li data-val="value3">Сообщения <small>(+1)</small></li>
+                    <li data-val="value4">Заявки <small>(4)</small></li>
+                    <li data-val="value5">Сообщения <small>(33)</small></li>
+                    <li data-val="value6">Настройки</li>
+                    <li data-val="value7">Профайл</li>
+                    <li data-val="value8">Знакомства</li>
+                    <li data-val="value9">Министерство нужных дел</li>
+                    <li data-val="value10">Трудоустройство</li>
+                  </ul>
+                  <select>                
+                    <option value="value1">Волонтер</option>
+                    <option value="value2">Мои заявки<small>(4)</small></option>
+                    <option value="value3">Сообщения<small>(+1)</small></option>
+                    <option value="value4">Заявки <small>(4)</small></option>
+                    <option value="value5">Сообщения <small>(33)</small></option>
+                    <option value="value6">Настройки</option>
+                    <option value="value7">Профайл</option>
+                    <option value="value8">Знакомства</option>
+                    <option value="value9">Министерство нужных дел</option>
+                    <option value="value10">Трудоустройство</option>
+                  </select>
+                </div>
               </div>
-              <!-- end filter-tags -->
-            </div>
-          </div>
-          
 
-          <div class="application-section__applications">
-            //=include partials/applications-user.html
-          </div>
+              <div class="applications-section__top">
+                <div class="applications-section__title">
+                  <h2 class="h2 h2_md">Мои заявки</h2>
+                </div>
 
-        </section>
-        <!-- end applications-section -->
-          
+                <div class="applications-section__filter-tags">
+                  <!-- begin filter-tags -->
+                  <div class="filter-tags has-no-padding">
+                    <button class="filter-tag filter-tag_mob-full is-fz-smaller">
+                      <span class="filter-tag__lable">Опубликованные <span>(2)</span></span>
+                    </button>
+                    <button class="filter-tag filter-tag_mob-full is-fz-smaller">
+                      <span class="filter-tag__lable">Волонтер ожидает вашего подтверждения <span>(2)</span></span>
+                    </button>
+                    <button class="filter-tag filter-tag_mob-full is-fz-smaller is-active">
+                      <span class="filter-tag__lable">Все <span>(4)</span></span>
+                    </button>
+                  </div>
+                  <!-- end filter-tags -->
+                </div>
+              </div>
+
+
+              <div class="application-section__applications">
+                //=include partials/applications-user.html
+              </div>
+
+            </section>
+            <!-- end applications-section -->
+
+          </div>
         </div>
-      </div>
-      <div class="user-right js-nav" data-nav="user-nav">
-        <div class="user-right__in">
-          <div class="profile-menu">
-            <ul class="service-menu service-menu_mod">
-              <li class="service-menu__item js-toggle">
-                <a href="#" class="service-menu__link js-toggle-button"><span>Волонтер</span></a>
-                <ul class="service-menu__submenu js-toggle-container">
-                  <li><a href="#" class="is-active"><span>Мои заявки<small>(4)</small></span></a></li>
-                  <li><a href="#"><span>Сообщения<small>(+1)</small></span></a></li>
-                </ul>
-              </li>
-              <li class="service-menu__item js-toggle">
-                <a href="#" class="service-menu__link js-toggle-button"><span>Знакомства</span></a>
-                <ul class="service-menu__submenu js-toggle-container">
-                  <li><a href="#"><span>Сообщения<small>(+2)</small></span></a></li>
-                  <li><a href="#"><span>Фотографии<small>(+1)</small></span></a></li>
-                  <li><a href="#"><span>Друзья</span></a></li>
-                  <li><a href="#"><span>Гости</span></a></li>
-                </ul>
-              </li>
+        <div class="user-right js-nav" data-nav="user-nav">
+          <div class="user-right__in">
+            <div class="profile-menu">
+              <ul class="service-menu service-menu_mod">
+                <li class="service-menu__item js-toggle">
+                  <a href="#" class="service-menu__link js-toggle-button"><span>Волонтер</span></a>
+                  <ul class="service-menu__submenu js-toggle-container">
+                    <li><a href="#" class="is-active"><span>Мои заявки<small>(4)</small></span></a></li>
+                    <li><a href="#"><span>Сообщения<small>(+1)</small></span></a></li>
+                  </ul>
+                </li>
+                <li class="service-menu__item js-toggle">
+                  <a href="#" class="service-menu__link js-toggle-button"><span>Знакомства</span></a>
+                  <ul class="service-menu__submenu js-toggle-container">
+                    <li><a href="#"><span>Сообщения<small>(+2)</small></span></a></li>
+                    <li><a href="#"><span>Фотографии<small>(+1)</small></span></a></li>
+                    <li><a href="#"><span>Друзья</span></a></li>
+                    <li><a href="#"><span>Гости</span></a></li>
+                  </ul>
+                </li>
 
-              <li class="service-menu__item js-toggle">
-                <a href="#" class="service-menu__link js-toggle-button"><span>Настройки</span></a>
-                <ul class="service-menu__submenu js-toggle-container">
-                  <li><a href="#"><span>Профайл</span></a></li>
-                  <li><a href="#"><span>Знакомства</span></a></li>
-                  <li><a href="#"><span>Министерство нужных дел</span></a></li>
-                  <li><a href="#"><span>Трудоустройство</span></a></li>
-                </ul>
-              </li>              
-              <li class="is-hidden">
-                <a href="#" class="service-menu__link service-menu__out"><span>Выход</span><i class="fa fa-sign-out"></i></a>
-              </li>
-            </ul>
+                <li class="service-menu__item js-toggle">
+                  <a href="#" class="service-menu__link js-toggle-button"><span>Настройки</span></a>
+                  <ul class="service-menu__submenu js-toggle-container">
+                    <li><a href="#"><span>Профайл</span></a></li>
+                    <li><a href="#"><span>Знакомства</span></a></li>
+                    <li><a href="#"><span>Министерство нужных дел</span></a></li>
+                    <li><a href="#"><span>Трудоустройство</span></a></li>
+                  </ul>
+                </li>              
+                <li class="is-hidden">
+                  <a href="#" class="service-menu__link service-menu__out"><span>Выход</span><i class="fa fa-sign-out"></i></a>
+                </li>
+              </ul>
+            </div>
           </div>
         </div>
       </div>
     </div>
+    //=include partials/footer-warning.html
   </div>
-  //=include partials/footer-warning.html
-</div>
-<!-- END out-->
-//=include partials/popups.html
-<script src="js/rating.js"></script>
-<script src="js/toggle.js"></script>
+  <!-- END out-->
+  //=include partials/popups.html
+  <script src="js/rating.js"></script>
+  <script src="js/toggle.js"></script>
 </body>
 </html>
